[gd_scene load_steps=9 format=3 uid="uid://gybvfyfnd2l8"]

[ext_resource type="Script" path="res://script/inventory_slot.gd" id="1_iqv60"]
[ext_resource type="Texture2D" uid="uid://dinlp1xecav8k" path="res://ui/LAbagslot@2x.png" id="2_1c2ch"]
[ext_resource type="Texture2D" uid="uid://iwd05yfkrcea" path="res://arts/Items/Bakery_goods (1).png" id="2_gdfu7"]
[ext_resource type="FontFile" uid="uid://c78wn34gvc2hh" path="res://ui/Retro Gaming.ttf" id="4_y11oj"]
[ext_resource type="StyleBox" uid="uid://h3a4a77tilcw" path="res://ui/buttonStyle/buttonNormal.tres" id="5_8o16b"]
[ext_resource type="StyleBox" uid="uid://bxl125ng6wgnm" path="res://ui/buttonStyle/buttonPressed.tres" id="6_xsfko"]

[sub_resource type="LabelSettings" id="LabelSettings_4ufvn"]
line_spacing = 2.08165e-12
font = ExtResource("4_y11oj")
font_size = 10
font_color = Color(0.772549, 0.129412, 0.517647, 1)
outline_size = 1
shadow_size = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jbg2q"]

[node name="Inventory_slot" type="Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(10, 10)
script = ExtResource("1_iqv60")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
offset_left = 40.0
offset_right = 80.0
offset_bottom = 42.0
texture = ExtResource("2_1c2ch")
expand_mode = 1

[node name="Item" type="Sprite2D" parent="TextureRect"]
position = Vector2(20, 18)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_gdfu7")

[node name="Quanity" type="Label" parent="TextureRect"]
modulate = Color(0.772549, 0.129412, 0.517647, 1)
self_modulate = Color(0.784314, 0.137255, 0.52549, 1)
layout_mode = 0
offset_left = 2.0
offset_right = 37.0
offset_bottom = 40.0
text = " "
label_settings = SubResource("LabelSettings_4ufvn")
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 3
clip_text = true

[node name="item button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 40.0
offset_right = 80.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_jbg2q")

[node name="detail" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = -5.0
color = Color(0.976471, 0.823529, 1, 1)

[node name="Type" type="Label" parent="detail"]
layout_mode = 0
offset_left = 2.0
offset_top = 15.0
offset_right = 49.0
offset_bottom = 41.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.772549, 0.129412, 0.517647, 1)
theme_override_fonts/font = ExtResource("4_y11oj")
text = "Type:"

[node name="Name" type="Label" parent="detail"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 57.0
offset_bottom = 29.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.772549, 0.129412, 0.517647, 1)
theme_override_fonts/font = ExtResource("4_y11oj")
text = "Name:"

[node name="Interact2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = -5.0
color = Color(0.976471, 0.823529, 1, 1)

[node name="Ask" type="Button" parent="Interact2"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 159.0
offset_bottom = 33.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.709804, 0.2, 0.505882, 1)
theme_override_fonts/font = ExtResource("4_y11oj")
theme_override_styles/normal = ExtResource("5_8o16b")
theme_override_styles/pressed = ExtResource("5_8o16b")
text = "Ask"

[node name="Give" type="Button" parent="Interact2"]
layout_mode = 0
offset_left = 4.0
offset_top = 16.0
offset_right = 159.0
offset_bottom = 47.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.772549, 0.129412, 0.517647, 1)
theme_override_fonts/font = ExtResource("4_y11oj")
theme_override_styles/normal = ExtResource("5_8o16b")
theme_override_styles/pressed = ExtResource("6_xsfko")
text = "Give"

[node name="Interact" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = -5.0
color = Color(0.976471, 0.823529, 1, 1)

[node name="use" type="Button" parent="Interact"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 159.0
offset_bottom = 33.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.772549, 0.129412, 0.517647, 1)
theme_override_fonts/font = ExtResource("4_y11oj")
theme_override_styles/normal = ExtResource("5_8o16b")
theme_override_styles/pressed = ExtResource("6_xsfko")
text = "Use"

[node name="Drop" type="Button" parent="Interact"]
layout_mode = 0
offset_left = 4.0
offset_top = 16.0
offset_right = 159.0
offset_bottom = 47.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(0.772549, 0.129412, 0.517647, 1)
theme_override_fonts/font = ExtResource("4_y11oj")
theme_override_styles/normal = ExtResource("5_8o16b")
theme_override_styles/pressed = ExtResource("6_xsfko")
text = "Drop"

[connection signal="mouse_entered" from="item button" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="item button" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="item button" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="Interact2/Give" to="." method="_on_give_pressed"]
[connection signal="pressed" from="Interact/Drop" to="." method="_on_drop_pressed"]
